tests/errors/struct-duplicate-decl.ari
struct Point {
  x: i64,
}

struct Point {
  y: i64,
}

fn main() -> i64 {
  return 0;
}
